--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
 }
 
 body {
-   --text-main-color: #000000;
-   --text-secondary-color: #999999;
+    --text-main-color: #000000;
+    --text-secondary-color: #999999;
 }
 
 .row {
@@ -61,9 +61,56 @@ li a {
     border-bottom: 3px solid #FFD644;
 }
 
+.hero {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 70px;
+    align-items: flex-end;
+}
+
 .header__block {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 76px;
+}
+
+.hero__block {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 25px;
+}
+
+.hero__img img {
+    padding: 8px;
+    border: 3px solid #FFD644;
+    border-radius: 100px;
+}
+
+h1 {
+    font-size: 44px;
+    line-height: 53px;
+    width: 291px;
+    margin: 0;
+}
+
+.hero__info {
+    font-size: 20px;
+    line-height: 25px;
+    font-weight: 400;
+}
+
+.cursor__text {
+    padding-bottom: 23px;
+}
+
+.row__hero {
+    background-image: url(../img/cursor.svg);
+    background-color: transparent;
+    background-size: 70.61px 85.67px;
+    background-repeat: no-repeat;
+    background-position:  right 81px top 159px;
+
 }
