--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,21 @@ h2 {
     display: none;
 }
 
+.menu__mobile {
+    display: none;
+    position: fixed;
+    top: -29px;
+    right: 7px;
+    width: 375px;
+    min-height: 648px;
+    box-sizing: border-box;
+    padding: 60px 34px;
+    background-color: #fff;
+    z-index: 3;
+    border: 1px solid black;
+    margin: 0 -10px;
+}
+
 @media (max-width: 1060px) {
     .container {
         padding: 0 10px;
@@ -480,4 +495,38 @@ h2 {
         font-size: 20px;
         line-height: 26px;
     }
+
+    .menu__mobile {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .menu__mobile .main-nav {
+        flex-direction: column;
+        gap: 68px;
+        align-items: flex-start;
+    }
+
+    .menu__right {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: space-between;
+    }
+
+    .main-nav {
+        padding: 0;
+    }
+
+    .menu__button {
+        border: 0;
+        background: transparent;
+        cursor: pointer;
+    }
+
+    a.nav-item--active {
+        color: var(--text-main-color);
+        border-bottom: 2px solid #FFD644;
+    }
+
 }
