--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,75 @@ h2 {
         width: 300px;
         text-align: center;
     }
+
+    div.cases__text__block {
+        text-align: center;
+        padding: 0;
+    }
+
+    div.cases__image__mobile {
+        display: block;
+        padding-bottom: 40px;
+    }
+
+    .cases__image__mobile img {
+        width: 100%;
+        height: auto;
+    }
+
+    img.cases__main__image__mobile {
+        display: block;
+        width: 100%;
+        height: auto;
+    }
+
+    div.cases__image {
+        display: none;
+    }
+
+    .cases__main__image {
+        display: none;
+    }
+
+    div.secondary__color {
+        color: var(--text-secondary-color);
+        text-align: left;
+    }
+
+    div.recall__link a {
+        position: relative;
+        top: 0;
+    }
+
+    div.recall__link {
+        padding: 20px 0;
+        text-align: center;
+    }
+
+    div.cases__main__title {
+        font-size: 28px;
+        padding: 0;
+        line-height: normal;
+    }
+
+    div.cases__text__block .portfolio {
+        padding: 0;
+    }
+
+    div.cases__text {
+        font-size: 15px;
+        line-height: 140%;
+        padding-bottom: 40px;
+    }
+
+    div.cases__title {
+        font-size: 20px;
+        line-height: 130%;
+    }
+
+    div.cases__body {
+        padding: 0;
+    }
 }
 
 @media (max-width: 650px) {
@@ -684,4 +753,63 @@ h2 {
 .portfolio {
     font-size: 44px;
     line-height: 53px;
+}
+
+.recall__link a {
+    position: absolute;
+   text-decoration: none;
+   color: var(--text-secondary-color);
+   font-size: 13px;
+   line-height: 135%;
+   top: 20px; 
+}
+
+.recall__link a:hover {
+    text-decoration: underline;
+}
+
+.cases__body {
+    padding: 60px 0;
+}
+
+.cases__text {
+    font-size: 18px;
+    line-height: 150%;
+    max-width: 686px;
+    padding: 20px 0 80px 0;
+}
+
+.cases__text__block {
+    padding: 0 200px;
+}
+
+.cases__title {
+    font-size: 24px;
+    line-height: 30px;
+}
+
+.cases__text__block .portfolio {
+    padding-bottom: 20px;
+}
+
+.cases__image {
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+.cases__image__mobile {
+    display: none;
+}
+
+div.last {
+    padding-bottom: 0;
+}
+
+.cases__main__image {
+    width: 100%;
+    height: auto;
+}
+
+.cases__main__image__mobile {
+    display: none;
 }
