--- a/css/style.css
+++ b/css/style.css
@@ -705,6 +705,53 @@ h2 {
         line-height: 140%;
         width: 280px;
     }
+
+    .blog__text {
+        display: none;
+    }
+
+    div.blog__text__mobile {
+        display: block;
+        padding: 16px 0 20px 0;
+    }
+
+    img.blog__image__desktop {
+        display: none;
+    }
+
+    img.blog__image__mobile {
+        display: block;
+    }
+
+    div.blog__container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+    div.blog__text__block {
+        text-align: center;
+    }
+
+    div.blog__button button a {
+        width: 210px;
+        display: block;
+        font-size: 15px;
+    }
+
+    div.blog__body {
+        gap: 60px;
+    }
+
+    div.blog__title {
+        text-align: center;
+        padding: 50px 0;
+        font-size: 34px;
+    }
+
+    div.blog__text__title {
+        font-size: 20px;
+    }
 }
 
 .speeches__iamge__mobile {
@@ -968,5 +1015,66 @@ div.last {
 }
 
 .speeches__hero__mobile {
+    display: none;
+}
+
+.blog__title {
+    font-size: 44px;
+    padding: 70px 0 80px 0;
+}
+
+.blog__body {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+}
+
+.blog__container {
+    display: flex;
+    gap: 74px;
+}
+
+.blog__text__title {
+    font-size: 26px;
+    line-height: 130%;
+}
+
+.blog__text {
+    font-size: 18px;
+    line-height: 140%;
+    color: var(--text-secondary-color);
+    padding: 20px 0 30px 0;
+}
+
+.blog__button button {
+    background: transparent;
+    border: none;
+    height: 50px;
+}
+
+.blog__button button a {
+    border-radius: 100px;
+    border: 1px solid #000;
+    font-size: 18px;
+    line-height: 140%;
+    padding: 11px 27px;
+    background: transparent;
+    text-decoration: none;
+    color: var(--text-main-color);
+    transition: 400ms;
+}
+
+.blog__button button a:hover {
+    box-shadow: 0px 0px 5px black;
+}
+
+.blog__text__mobile {
+    display: none;
+    font-size: 15px;
+    line-height: 140%;
+    color: var(--text-secondary-color);
+}
+
+.blog__image__mobile {
     display: none;
 }
