--- a/css/style.css
+++ b/css/style.css
@@ -992,6 +992,10 @@ div.last {
 
 .cases__main__image__mobile {
     display: none;
+    animation: fadeIn;
+    animation-duration: 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .speeches__body {
